--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-color: #4067e9;
+  background-color: #0065a0;
   min-height: 100vh;
 }
 
@@ -79,7 +79,7 @@
   margin: 0px;
   text-align: center;
   vertical-align: middle;
-  font-size: calc(4px + 2vmin);
+  font-size: calc(0.1px + 2vmin);
   font-weight: 500;
 }
 
@@ -126,6 +126,11 @@
   align-items: center;
   text-align: center;
   color: #000;
+}
+
+.strike-title {
+  font-size: 25px;
+  font-weight: 200;
 }
 
 .titles {
