--- a/src/App.scss
+++ b/src/App.scss
@@ -142,6 +142,12 @@
   border-color: transparent;
 }
 
+.login-buttons-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .login-button {
   cursor: pointer;
   color: #FFFFFF;
@@ -231,5 +237,7 @@
 }
 
 .noctm-visual-fix {
-  margin-bottom: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
