--- a/src/App.scss
+++ b/src/App.scss
@@ -113,6 +113,51 @@
   text-align: center;
   color: #FFFFFF;
   padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.code-label {
+  //font-family: 'Fredoka One', cursive;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 50px;
+  line-height: 42px;
+  display: block;
+  align-items: center;
+  text-align: center;
+  color: #FFFFFF;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.lobby-card-container {
+  //background-color: #282c34;
+  //min-height: 100vh;
+  //display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 510px;
+  //color: white;
+}
+
+.lobby-card {
+  background: #FFFFFF;
+  box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+  height: 50px;
+  width: 150px;
+  margin: 10px;
+  float: left;
+  align-content: center;
+  vertical-align: middle;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.lobby-card-text {
+  font-weight: 500;
 }
 
 .login-input {
@@ -143,7 +188,7 @@
 }
 
 .login-buttons-container {
-  display: flex;
+  display: block;
   justify-content: center;
   align-items: center;
 }
